--- a/RESUME 8/css.zip.css/css/stylesheet.css
+++ b/RESUME 8/css.zip.css/css/stylesheet.css
@@ -1,7 +1,3 @@
-*{
-  margin: 0 auto;
-  padding: 0;
-}
 body{
   background-color: gray;
   color:black;
@@ -9,10 +5,9 @@ body{
   font-size: 16px;
   font-weight: normal;
   line-height: 1.6em;
-  /*border:solid orangered 10px;*/
-  margin: 0 auto;
+  border:solid orangered 10px;
+  margin: 0;
   padding: 0px;
-
 }
 
 /* LINK ELEMENT */
@@ -34,6 +29,7 @@ a:hover{
   border: groove 5px;
   border-color: orangered;
   margin-top: 5px;
+  max-width:100%
 }
 
 .nav-menu{
@@ -58,20 +54,23 @@ a:hover{
   background-color: #333;
   color: #fff;
   text-align: center;
-  padding: 8px;
+  /*padding: 8px;*/
+  max-width:100%;
+  font-size: 15px;
 }
 
 #sidebar {
   background-color: darkgoldenrod;
   color: #fff;
-  float: left;
-  padding: 15px;
+  /*float: left;*/
+  padding: 0px;
   padding-top: 15px;
 }
 
 #main-content{
-  padding-left: 10px;
+  padding-left: 0px;
   margin:10px;
+  max-width: 100%;
 }
 
 #main-content{
@@ -120,52 +119,31 @@ a:hover{
   padding: 10px;
 }
 
+
 /*code for mobile devices smaller that 600px*/
 @media only screen and (max-width:600px){
-/*  body{
-    background-color: lightblue;
-  } */
-
   div{
-    width: 100%;
-
+    max-width: 100%;
+    font-size: 12px;
   }
-  picture{
-    width: 100%;
-  }
-  header{
-    width: 100%;
-  }
-} 
-
-
-
-/*Small devices (portrait tablets and large phones, 600px and up*/
-@media only screen and (min-width:600px){
-  body{
-    background-color: red;
+  #main-header{
+    font-size: 10px;
   }
 }
 
-/*Medium devices(landscape tablets, 768px and up)*/
-@media only screen and (min-width:768px){
-  body{
-    background-color: green;
+/*Medium devices(tablets, 768px and up)*/
+@media only screen and (max-width:768px){
+  div{
+   max-width: 100%;
+  }
+  img{
+    max-width: 100%;
   }
 }
 
-/*Large devices(laptops/desktops,992px and up*/
-@media only screen and (min-width:992px){
-  body{
-    background-color: yellow;
+/*Large devices(laptops,992px and up)*/
+@media only screen and (max-width:992px){
+  div{
+    max-width: 100%;
   }
 }
-
-/*Extra large devices(large laptops and desktops,1200px and up)*/
-@media only screen and (min-width:1200px){
-  body{
-    background-color: orange;
-  }
-}
-
-
